# qagent-k8s

./: .gitignore  CLAUDE.md  README.md  kind-cluster.yaml  pyproject.toml  requirements.txt
agents/advisor_agent/: Dockerfile  __init__.py  main.py
agents/coder_agent/: Dockerfile  __init__.py  main.py
agents/orchestrator/: Dockerfile  __init__.py  main.py
agents/plan_agent/: Dockerfile  __init__.py  main.py
agents/reviewer_agent/: Dockerfile  __init__.py  main.py
agents/ui/: Dockerfile  main.py
agents/ui/templates/: index.html
k8s/base/: agents.yaml  config.yaml  hpa.yaml  namespace.yaml  rbac.yaml  ui.yaml
k8s/capstone/: broken-scenario.yaml
k8s/networking/: network-policy.yaml
k8s/observability/: grafana-dashboard.yaml  monitoring.yaml
k8s/security/: pod-security.yaml
lab-guides/: lab-01-mental-models.md  lab-04-networking-security.md  lab-06-capstone.md
scripts/: build_and_load.sh  capstone_setup.sh  direct_llm_call.py  health_check.py  load_test.py  port_forward_all.sh  setup_cluster.sh
shared/: __init__.py  a2a_protocol.py  llm_client.py  utils.py
