[tool.poetry]
name = "qagent-k8s"
version = "1.0.0"
description = "AI-powered multi-agent system on Kubernetes"
authors = ["Shadab Hussain"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
uvicorn = {version = "0.29.0", extras = ["standard"]}
langchain = "0.2.6"
langchain-google-vertexai = "2.0.0"
langchain-core = "0.2.11"
httpx = "0.27.0"
pydantic = "2.7.4"
opentelemetry-api = "1.24.0"
opentelemetry-sdk = "1.24.0"
opentelemetry-instrumentation-fastapi = "0.45b0"
prometheus-client = "0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
